--- a/css/styles.css
+++ b/css/styles.css
@@ -736,8 +736,8 @@ footer .social-link:focus {
 }
 
 .subscribe-btn {
-  min-width: 165px;
-  height: 40px;
+  width: 169px;
+  height: 56px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -862,7 +862,6 @@ footer .social-link:focus {
 }
 
 .modal-title {
-  margin-top: 72px;
   width: 100%;
   font-weight: 500;
   font-size: 16px; 
@@ -879,8 +878,7 @@ footer .social-link:focus {
 
 .application-form {
   display: flex;
-  flex-direction: column; 
-  margin-top: 32px;       
+  flex-direction: column;      
   gap: 12px;              
 }
 
