--- a/css/styles.css
+++ b/css/styles.css
@@ -114,99 +114,9 @@ header {
 
 
 
-@media screen and (min-width: 768px) {
-  .burger-btn {
-    display: none;
-  }
-
-  .menu-nav-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .nav-link-header {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-decoration: none;
-    padding: 24px 0;
-    display: block;
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
 
 
-  .current::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #404bbf;
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
 
-  .contact-block {
-    font-style: normal;
-    display: block;
-    margin-left: auto;
-    margin-bottom: 48px;
-  }
-
-  .main-header {
-    display: flex;
-    align-items: center;
-  }
-
-  .nav-list {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  }
-
-  .contact-link {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #434455;
-    display: block;
-  }
-
-  .nav-link-header:hover,
-  .nav-link-header:focus,
-  .contact-link:hover,
-  .contact-link:focus {
-    color: #404bbf;
-  }
-}
-
-
-@media screen and (min-width: 1158px) {
-  .icon-nav-style {
-    margin-right: 76px;
-  }
-
-  .nav-list {
-    flex-direction: row;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .contact-link {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-  }
-}
 
 /* mobile-menu */
 
@@ -310,15 +220,15 @@ header {
 
 .social-icon {
   width: 40px;
-    height: 40px;
-    background-color: #4D5AE5;
-    /* колір фону */
-    border-radius: 50%;
-    /* робить круглим */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 40px;
+  background-color: #4D5AE5;
+  /* колір фону */
+  border-radius: 50%;
+  /* робить круглим */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon svg {
@@ -351,7 +261,7 @@ header {
   text-align: center;
   background-color: #2e2f42;
   padding: 188px 0 188px 0;
-  max-width: 1440px;
+  max-width: 320px;
   margin: 0 auto;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/img-name.jpg);
@@ -368,8 +278,159 @@ header {
   text-align: center;
   color: #fff;
   margin: 0 auto;
-  margin-bottom: 48px;
-  max-width: 496px;
+  margin-top: 72px;
+  margin-bottom: 72px;
+  max-width: 261px;
 }
 
+button {
+  justify-content: center;
+  cursor: pointer;
+  background: #4d5ae5;
+}
+
+.order-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-btn:hover,
+.order-btn:focus {
+  background-color: #404bbf;
+
 /* #endregion section-title */
+
+
+
+
+
+
+
+
+
+  @media screen and (min-width: 768px) {
+    .burger-btn {
+      display: none;
+    }
+
+    .menu-nav-list {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+
+    .nav-link-header {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: #2e2f42;
+      text-decoration: none;
+      padding: 24px 0;
+      display: block;
+      position: relative;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+
+    .current::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: #404bbf;
+      opacity: 1;
+      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .contact-block {
+      font-style: normal;
+      display: block;
+      margin-left: auto;
+      margin-bottom: 48px;
+    }
+
+    .main-header {
+      display: flex;
+      align-items: center;
+    }
+
+    .nav-list {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+
+    .contact-link {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.04em;
+      color: #434455;
+      display: block;
+    }
+
+    .nav-link-header:hover,
+    .nav-link-header:focus,
+    .contact-link:hover,
+    .contact-link:focus {
+      color: #404bbf;
+    }
+
+    .section-title {
+      max-width: 768px;
+    }
+
+    .main-title {
+      margin-top: 112px;
+      margin-bottom: 36px;
+      max-width: 496px;
+    }
+  }
+
+ 
+@media screen and (min-width: 1158px) {
+  .icon-nav-style {
+    margin-right: 76px;
+  }
+
+  .nav-list {
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .contact-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
+  }
+
+    .section-title {
+      max-width: 1440px;
+    }
+
+    .main-title {
+      margin-top: 188px;
+      margin-bottom: 48px;
+      max-width: 496px;
+    }
+  }
+
+}
