--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,4 +1,3 @@
-
 .section {
   padding-block: 120px;
 }
@@ -40,7 +39,7 @@ img {
   position: relative;
   text-decoration: none;
   color: #404bbf;
-  padding-bottom: 4px; 
+  padding-bottom: 4px;
   transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -51,15 +50,15 @@ img {
 
 
 .icon-container {
-  display: flex;              
-  align-items: center;        
-  justify-content: center;    
-  height: 112px; 
-  width: 264px;             
-  background-color: #f4f4fd;  
-  border-radius: 4px;         
-  border: 1px solid #8e8f99; 
-  margin-bottom: 8px;         
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  width: 264px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 8px;
 }
 
 .icon-link {
@@ -92,11 +91,11 @@ img {
   justify-content: center;
   text-align: center;
   background-color: #2e2f42;
-  padding: 188px 0 188px 0; 
-  max-width: 1440px; 
+  padding: 188px 0 188px 0;
+  max-width: 1440px;
   margin: 0 auto;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
-  url(../images/img-name.jpg);  
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/img-name.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -135,7 +134,7 @@ button {
   border: none;
   border-radius: 4px;
   margin: 0 auto;
-  transition: background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -143,7 +142,7 @@ button {
 /* #endregion section-title */
 /* #region section-strategy */
 .section-strategy {
-  background-color: #fff; /* белый фон для секции */
+  background-color: #fff;
   padding-bottom: 120px;
   padding-top: 120px;
 }
@@ -160,6 +159,7 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .section-strategy ul {
   display: flex;
   justify-content: center;
@@ -205,17 +205,19 @@ button {
 
 .feature-block-item h3,
 .feature-block-item p {
-  text-align: left;   
-  width: 100%;        
+  text-align: left;
+  width: 100%;
 }
 
 .feature-block-item svg {
   margin-bottom: 8px;
 }
+
 /* #endregion section-strategy */
 /* #region section-fotos */
 .section-fotos {
-  background-color: #f4f4fd; /* фон для секции */
+  background-color: #f4f4fd;
+  /* фон для секции */
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -297,36 +299,35 @@ button {
 
 .foto-info ul {
   display: flex;
-  gap: 24px; 
+  gap: 24px;
   justify-content: center;
   align-items: center;
 }
 
 .foto-info ul li {
-   display: flex;              
-  align-items: center;       
+  display: flex;
+  align-items: center;
   justify-content: center;
-  width: 40px;   
+  width: 40px;
   height: 40px;
   border-radius: 50%;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   background-color: #4D5AE5;
   /* padding: 6px; */
-} 
+}
 
 .foto-info ul li svg {
   fill: black;
-  transition: fill 250ms 
-  cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: fill 250ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .foto-info ul li:hover {
   transform: scale(1.1);
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .foto-info ul li:hover svg {
-  fill: #4d5ae5; 
+  fill: #4d5ae5;
 }
 
 .social-link:hover {
@@ -352,19 +353,20 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42; 
+  color: #2e2f42;
   text-align: center;
 }
 
 .social-media-point:first-child {
-  width: 40px;   
-  height: 40px; 
+  width: 40px;
+  height: 40px;
 }
 
 .social-media-point:first-child .social-link {
-  width: 100%;   
-  height: 100%;  
+  width: 100%;
+  height: 100%;
 }
+
 /* #endregion section-fotos */
 
 /* #region portfolio */
@@ -408,9 +410,9 @@ button {
 }
 
 .portfolio-item:hover {
-  transform: translateY(-5px); 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-    0px 1px 1px rgba(46, 47, 66, 0.16), 
+  transform: translateY(-5px);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -453,7 +455,7 @@ button {
 }
 
 .portfolio-description {
-  position: absolute;   
+  position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
@@ -462,7 +464,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 40px 32px;
-  background-color: #4d5ae5; 
+  background-color: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -470,23 +472,24 @@ button {
 .portfolio-item:hover .portfolio-description {
   transform: translateY(0%);
 }
+
 /* #endregion portfolio */
 /* #region footer */
 .footer-logo-cont {
   background-color: #2e2f42;
-  padding: 100px 0; 
+  padding: 100px 0;
 }
 
 .footer-logo-cont .container {
   display: flex;
-  align-items: baseline; 
+  align-items: baseline;
   justify-content: flex-start;
   gap: 120px;
 }
 
 .footer-logo-block {
   margin-right: 120px;
-   align-items: baseline; 
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -545,8 +548,8 @@ button {
 }
 
 .social-icons li {
-  display: flex;              
-  align-items: center;       
+  display: flex;
+  align-items: center;
   justify-content: center;
   width: 40px;
   height: 40px;
@@ -580,7 +583,7 @@ button {
   height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-  display: flex; 
+  display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -606,10 +609,10 @@ footer .social-link:focus {
 
 .subscription-form {
   display: flex;
-    gap: 8px;
-    align-items: flex-end;
-    width: 100%;
-    gap: 24px;
+  gap: 8px;
+  align-items: flex-end;
+  width: 100%;
+  gap: 24px;
 }
 
 .footer-subscription {
@@ -698,6 +701,7 @@ footer .social-link:focus {
   margin-left: 16px;
   fill: black;
 }
+
 /* #endregion footer */
 
 /* #region Modal window */
@@ -741,7 +745,7 @@ footer .social-link:focus {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   padding: 72px 24px 24px 24px;
 }
 
@@ -783,7 +787,7 @@ footer .social-link:focus {
 .modal-title {
   width: 100%;
   font-weight: 500;
-  font-size: 16px; 
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
@@ -793,12 +797,12 @@ footer .social-link:focus {
 
 .subscribe-icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .application-form {
   display: flex;
-  flex-direction: column;      
-  gap: 12px;              
+  flex-direction: column;
+  gap: 12px;
 }
 
 .input-with-icon {
@@ -823,7 +827,7 @@ footer .social-link:focus {
 
 .input-name {
   width: 100%;
-  height: 40px; 
+  height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
@@ -880,15 +884,15 @@ footer .social-link:focus {
 }
 
 .checkbox-span {
-    width: 16px;
-    height: 16px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
 .checkbox-input.visually-hidden {
@@ -961,7 +965,7 @@ footer .social-link:focus {
 
 .checkbox-wrapper label,
 .checkbox-wrapper .checkbox-span {
-white-space: nowrap;
+  white-space: nowrap;
 }
 
 .checkbox-wrapper:hover {
