--- a/css/styles.css
+++ b/css/styles.css
@@ -308,101 +308,166 @@ button {
 .order-btn:hover,
 .order-btn:focus {
   background-color: #404bbf;
+}
 
 /* #endregion section-title */
 
+/* #region section-strategy */
+
+.section-strategy {
+  background-color: #fff;
+  padding-bottom: 120px;
+  padding-top: 120px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.section-strategy ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.section-strategy li {
+  /* width: calc((100% - 72px) / 4); */
+  text-align: center;
+}
+
+.section-strategy p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.feature-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.feature-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
 
 
 
 
+/* #endregion section-strategy */
 
 
-
-  @media screen and (min-width: 768px) {
-    .burger-btn {
-      display: none;
-    }
-
-    .menu-nav-list {
-      display: flex;
-      align-items: center;
-      gap: 40px;
-    }
-
-    .nav-link-header {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      color: #2e2f42;
-      text-decoration: none;
-      padding: 24px 0;
-      display: block;
-      position: relative;
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-
-    .current::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -1px;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: #404bbf;
-      opacity: 1;
-      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .contact-block {
-      font-style: normal;
-      display: block;
-      margin-left: auto;
-      margin-bottom: 48px;
-    }
-
-    .main-header {
-      display: flex;
-      align-items: center;
-    }
-
-    .nav-list {
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-    }
-
-    .contact-link {
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 1.17;
-      letter-spacing: 0.04em;
-      color: #434455;
-      display: block;
-    }
-
-    .nav-link-header:hover,
-    .nav-link-header:focus,
-    .contact-link:hover,
-    .contact-link:focus {
-      color: #404bbf;
-    }
-
-    .section-title {
-      max-width: 768px;
-    }
-
-    .main-title {
-      margin-top: 112px;
-      margin-bottom: 36px;
-      max-width: 496px;
-    }
+/* Планшетні стилі */
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
   }
 
- 
+  .menu-nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .nav-link-header {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
+    padding: 24px 0;
+    display: block;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .contact-block {
+    font-style: normal;
+    display: block;
+    margin-left: auto;
+    margin-bottom: 48px;
+  }
+
+  .main-header {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .contact-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #434455;
+    display: block;
+  }
+
+  .nav-link-header:hover,
+  .nav-link-header:focus,
+  .contact-link:hover,
+  .contact-link:focus {
+    color: #404bbf;
+  }
+
+  .section-title {
+    max-width: 768px;
+  }
+
+  .main-title {
+    margin-top: 112px;
+    margin-bottom: 36px;
+    max-width: 496px;
+  }
+
+  .section-strategy li {
+    /* width: calc((100% - 72px) / 4); */
+    text-align: left;
+  }
+}
+
+
+/* Десктопні стилі */
 @media screen and (min-width: 1158px) {
   .icon-nav-style {
     margin-right: 76px;
@@ -422,15 +487,13 @@ button {
     padding: 24px 0;
   }
 
-    .section-title {
-      max-width: 1440px;
-    }
-
-    .main-title {
-      margin-top: 188px;
-      margin-bottom: 48px;
-      max-width: 496px;
-    }
+  .section-title {
+    max-width: 1440px;
   }
 
+  .main-title {
+    margin-top: 188px;
+    margin-bottom: 48px;
+    max-width: 496px;
+  }
 }
