--- a/css/styles.css
+++ b/css/styles.css
@@ -394,7 +394,167 @@ button {
 
 /* #region section-fotos */
 
+.section-fotos {
+  background-color: #f4f4fd;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.our_team {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.section-fotos ul {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.section-fotos li {
+  text-align: center;
+}
+
+.section ul li h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.section ul li p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+.section-fotos img {
+  display: block;
+  margin: 0 auto;
+}
+
+.section-fotos .social-networks {
+  fill: #f4f4fd;
+}
+
+.list-foto {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+
+.foto-li {
+  background-color: #fff;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.foto-li img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.foto-info {
+  padding: 32px 0;
+}
+
+.foto-info ul {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+}
+
+.foto-info ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background-color: #4D5AE5;
+}
+
+.foto-info ul li svg {
+  fill: black;
+  transition: fill 250ms cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.foto-info ul li:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.foto-info ul li:hover svg {
+  fill: #4d5ae5;
+}
+
+.social-link:hover {
+  background-color: #404bbf;
+}
+
+.social-link:focus {
+  background-color: #404bbf;
+}
+
+.foto-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.foto-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+}
+
+
 /* #endregion section-fotos */
+
+
+/* #region portfolio */
+
+.portfolio-section {
+  background-color: #fff;
+  min-width: 288px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.portfolio-title {
+  text-align: center;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  font-size: 36px;
+  font-weight: 700;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+/* #endregion portfolio */
 
 
 /* Планшетні стилі */
@@ -513,6 +673,20 @@ button {
   .icon-container {
     display: flex;
   }
+
+  .list-foto {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+
+  .foto-li {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .portfolio-section {
+    min-width: 736px;
+  }
 }
 
 
@@ -555,5 +729,33 @@ button {
 
   .feature-block-item {
     width: calc((100% - 72px) / 4);
+  }
+
+  .feature-block-item div {
+    margin-bottom: 8px;
+  }
+
+  .feature-block-item h3 {
+    margin-bottom: 40px;
+  }
+
+  .section-fotos {
+    background-color: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .list-foto {
+    flex-wrap: nowrap;
+  }
+
+  .foto-li {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+
+  .portfolio-section {
+    min-width: 1128px;
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 }
