--- a/css/styles.css
+++ b/css/styles.css
@@ -538,7 +538,6 @@ button {
 
 .portfolio-section {
   background-color: #fff;
-  min-width: 288px;
   padding-top: 96px;
   padding-bottom: 96px;
 }
@@ -552,6 +551,93 @@ button {
   font-weight: 700;
   color: #2e2f42;
   margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  width: 288px;
+  margin: 0 auto 96px;
+}
+
+.portfolio-item {
+  text-align: left;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.portfolio-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-info {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio-info h3 {
+  margin: 32px 0 8px 16px;
+}
+
+.portfolio-info p {
+  margin-left: 16px;
+}
+
+.portfolio-item:hover .portfolio-info {
+  transform: translateY(0);
+}
+
+.portfolio-name {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.portfolio-role {
+  font-size: 16px;
+  color: #434455;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.portfolio-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-description {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-description {
+  transform: translateY(0%);
 }
 
 /* #endregion portfolio */
@@ -684,8 +770,16 @@ button {
     width: calc((100% - 24px) / 2);
   }
 
-  .portfolio-section {
-    min-width: 736px;
+  .portfolio-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 24px) / 2);
   }
 }
 
@@ -757,5 +851,13 @@ button {
     min-width: 1128px;
     padding-top: 120px;
     padding-bottom: 120px;
+  }
+
+  .portfolio-list {
+    gap: 48px 24px;
+  }
+
+  .portfolio-item {
+    width: calc((100% - 48px) / 3);
   }
 }
