--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ header {
   gap: 40px;
 }
 
+
 .social-icon {
   width: 40px;
   height: 40px;
@@ -652,11 +653,37 @@ button {
 }
 
 
+
+.footer-logo-cont .container {
+  display: flex;
+  /* активуємо flex */
+  flex-direction: column;
+  /* розташування елементів вертикально */
+  flex-wrap: wrap;
+  /* дозволяє переносити елементи при нестачі місця */
+  gap: 20px;
+  /* відстань між блоками */
+  align-items: flex-start;
+}
+
+/* 111 */
+
+.footer-logo-block,
+.footer-social-block,
+.footer-subscription {
+  width: 100%;
+  padding: 10px 0;
+}
+
+/* 111 */
+
+
 .footer-logo-block {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -687,9 +714,18 @@ button {
   margin-left: 16px;
 }
 
+.footer-social-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  width: 100%;
+}
+
+
 .footer-social-block .footer-text {
-  margin-left: 0;
   text-align: center;
+  margin: 0;
 }
 
 .footer-logo-cont .footer-social {
@@ -753,11 +789,7 @@ button {
   height: 40px;
 }
 
-.footer-social {
-  display: flex;
-  align-items: baseline;
-  gap: 16px;
-}
+
 
 .social-link {
   width: 100%;
@@ -781,6 +813,7 @@ footer .social-link:focus {
 
 .subscribe-title {
   margin-bottom: 16px;
+  margin-top: 72px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -792,33 +825,26 @@ footer .social-link:focus {
 .subscription-form {
   display: flex;
   flex-direction: column;
-  /* поле і кнопка один під одним */
   align-items: center;
-  /* по центру */
-  gap: 8px;
 }
 
 .footer-subscription {
   display: flex;
   flex-direction: column;
-  /* вертикально */
   align-items: center;
-  /* по центру горизонтально */
   gap: 16px;
-  /* відстань між заголовком та формою */
 }
 
 .label-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* по центру input та label */
   width: 100%;
 }
 
 .email-input {
   padding-left: 16px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
@@ -851,6 +877,8 @@ footer .social-link:focus {
   background-color: #4D5AE5;
   border: none;
   border-radius: 4px;
+  margin-top: 16px;
+  margin-bottom: 96px;
 }
 
 .subscription-input-group {
@@ -908,7 +936,6 @@ footer .social-link:focus {
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-
 
   .current::after {
     content: "";
@@ -1023,10 +1050,86 @@ footer .social-link:focus {
     width: calc((100% - 24px) / 2);
   }
 
-  .footer-logo-cont {
+  .footer-logo-cont .container {
+    background-color: #2e2f42;
+    display: flex;
+    flex-direction: row;
+    /* блоки горизонтально */
+    flex-wrap: wrap;
+    align-items: flex-start;
+    /* вирівнювання по верхньому краю */
+    gap: 40px;
     width: 768px;
+    /* фіксована ширина контейнера */
+    margin: 0 auto;
   }
+
+  .footer-social-block,
+  .footer-subscription {
+    width: auto;
+    /* природна ширина блоків */
+  }
+
+  .footer-logo-block {
+    flex: 1;
+    /* займає решту простору праворуч */
+  }
+
+  
+
+
+
+ 
+
+
+  /* 
+  .footer-logo-block,
+  .footer-subscription {
+    margin-left: 108px;
+    align-items: flex-start;
+  } 
+
+  
+
+  .footer-logo,
+  .footer-text.subscribe-title,
+  .email-input {
+    margin: 0;
+  }
+
+  
+
+  .footer-social-block .footer-text {
+    text-align: right;
+  }
+
+   .footer-social {
+    justify-content: flex-end;
+    gap: 16px;
+  } 
+
+ 
+
+
+  .subscription-form {
+    flex-direction: row;
+    gap: 16px;
+    align-items: center;
+  }
+
+
+  .subscription-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+  } */
+
+
+
+
 }
+
 
 
 /* Десктопні стилі */
