--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ header {
   color: #434455;
 }
 
+
 .phone-block .contact-link {
   font-weight: 700;
   font-size: 20px;
@@ -666,17 +667,12 @@ button {
   align-items: flex-start;
 }
 
-/* 111 */
-
 .footer-logo-block,
 .footer-social-block,
 .footer-subscription {
   width: 100%;
   padding: 10px 0;
 }
-
-/* 111 */
-
 
 .footer-logo-block {
   display: flex;
@@ -914,6 +910,9 @@ footer .social-link:focus {
 
 /* Планшетні стилі */
 @media screen and (min-width: 768px) {
+
+  /* #region header */
+
   .burger-btn {
     display: none;
   }
@@ -984,6 +983,10 @@ footer .social-link:focus {
     color: #404bbf;
   }
 
+  /* #endregion header */
+
+  /* #region section-title */
+
   .section-title {
     max-width: 768px;
   }
@@ -994,6 +997,10 @@ footer .social-link:focus {
     max-width: 496px;
   }
 
+  /* #endregion section-title */
+
+
+  /* #region section-strategy */
   .section-strategy ul {
     flex-direction: row;
     flex-wrap: wrap;
@@ -1004,26 +1011,12 @@ footer .social-link:focus {
     text-align: left;
   }
 
-  .feature-block-item {
-    width: calc((100% - 24px) / 2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  /* #endregion section-strategy */
 
-  .list-feature {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
-    row-gap: 79px;
-  }
 
-  .feature-block-item h3,
-  .feature-block-item p {
-    text-align: left;
-    width: 100%;
-  }
 
+
+  /* #region section-fotos */
   .icon-container {
     display: flex;
   }
@@ -1038,6 +1031,10 @@ footer .social-link:focus {
     width: calc((100% - 24px) / 2);
   }
 
+  /* #endregion section-fotos */
+
+
+  /* #region portfolio */
   .portfolio-list {
     flex-direction: row;
     flex-wrap: wrap;
@@ -1050,170 +1047,106 @@ footer .social-link:focus {
     width: calc((100% - 24px) / 2);
   }
 
-  .footer-logo-cont .container {
-    background-color: #2e2f42;
-    display: flex;
-    flex-direction: row;
-    /* блоки горизонтально */
-    flex-wrap: wrap;
-    align-items: flex-start;
-    /* вирівнювання по верхньому краю */
-    gap: 40px;
-    width: 768px;
-    /* фіксована ширина контейнера */
-    margin: 0 auto;
-  }
 
-  .footer-social-block,
-  .footer-subscription {
-    width: auto;
-    /* природна ширина блоків */
-  }
-
-  .footer-logo-block {
-    flex: 1;
-    /* займає решту простору праворуч */
-  }
-
-  
+  /* #endregion portfolio */
+  /* #region footer */
 
 
 
- 
-
-
-  /* 
-  .footer-logo-block,
-  .footer-subscription {
-    margin-left: 108px;
-    align-items: flex-start;
-  } 
-
-  
-
-  .footer-logo,
-  .footer-text.subscribe-title,
-  .email-input {
-    margin: 0;
-  }
-
-  
-
-  .footer-social-block .footer-text {
-    text-align: right;
-  }
-
-   .footer-social {
-    justify-content: flex-end;
-    gap: 16px;
-  } 
-
- 
-
-
-  .subscription-form {
-    flex-direction: row;
-    gap: 16px;
-    align-items: center;
-  }
-
-
-  .subscription-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-  } */
+  /* #endregion footer */
 
 
 
 
-}
 
 
+  /* Десктопні стилі */
+  @media screen and (min-width: 1158px) {
 
-/* Десктопні стилі */
-@media screen and (min-width: 1158px) {
-  .icon-nav-style {
-    margin-right: 76px;
-  }
+    /* #region header */
 
-  .nav-list {
-    flex-direction: row;
-    align-items: center;
-    gap: 40px;
-  }
+    .icon-nav-style {
+      margin-right: 76px;
+    }
 
-  .contact-link {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-  }
+    .nav-list {
+      flex-direction: row;
+      align-items: center;
+      gap: 40px;
+    }
 
-  .section-title {
-    max-width: 1440px;
-  }
+    .contact-link {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      padding: 24px 0;
+    }
 
-  .main-title {
-    margin-top: 188px;
-    margin-bottom: 48px;
-    max-width: 496px;
-  }
+    .section-title {
+      max-width: 1440px;
+    }
 
-  .section-strategy ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-  }
+    .main-title {
+      margin-top: 188px;
+      margin-bottom: 48px;
+      max-width: 496px;
+    }
 
-  .feature-block-item {
-    width: calc((100% - 72px) / 4);
-  }
+    .section-strategy ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 24px;
+    }
 
-  .feature-block-item div {
-    margin-bottom: 8px;
-  }
+    .feature-block-item {
+      width: calc((100% - 72px) / 4);
+    }
 
-  .feature-block-item h3 {
-    margin-bottom: 40px;
-  }
+    .feature-block-item div {
+      margin-bottom: 8px;
+    }
 
-  .section-fotos {
-    background-color: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
+    .feature-block-item h3 {
+      margin-bottom: 40px;
+    }
 
-  .list-foto {
-    flex-wrap: nowrap;
-  }
+    .section-fotos {
+      background-color: #f4f4fd;
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
 
-  .foto-li {
-    width: calc((100% - 3 * 24px) / 4);
-  }
+    .list-foto {
+      flex-wrap: nowrap;
+    }
 
-  .portfolio-section {
-    min-width: 1128px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
+    .foto-li {
+      width: calc((100% - 3 * 24px) / 4);
+    }
 
-  .portfolio-list {
-    gap: 48px 24px;
-  }
+    .portfolio-section {
+      min-width: 1128px;
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
 
-  .portfolio-item {
-    width: calc((100% - 48px) / 3);
-  }
+    .portfolio-list {
+      gap: 48px 24px;
+    }
 
-  .footer-logo-cont {
-    width: 1440px;
-  }
+    .portfolio-item {
+      width: calc((100% - 48px) / 3);
+    }
 
-  .footer-logo {
-    margin-top: 100px;
+    .footer-logo-cont {
+      width: 1440px;
+    }
+
+    .footer-logo {
+      margin-top: 100px;
+    }
+
   }
 }
