--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -219,6 +219,81 @@ button {
   margin-bottom: 8px;
 }
 
+
+
+1111
+
+/* #region section-strategy */
+.section-strategy {
+  background-color: #fff; /* белый фон для секции */
+  padding-bottom: 120px;
+  padding-top: 120px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.section-strategy ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.section-strategy li {
+  width: calc((100% - 72px) / 4);
+  text-align: left;
+}
+
+.section-strategy p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.feature-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.feature-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.feature-block-item {
+  width: calc((100% - 72px) / 4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.feature-block-item h3,
+.feature-block-item p {
+  text-align: left;   
+  width: 100%;        
+}
+
+.feature-block-item svg {
+  margin-bottom: 8px;
+}
 /* #endregion section-strategy */
 /* #region section-fotos */
 .section-fotos {
