--- a/css/styles.css
+++ b/css/styles.css
@@ -417,9 +417,7 @@ button {
 }
 
 .list-foto {
-  display: flex;
   flex-direction: column;
-  gap: 72px;
 }
 
 .foto-li {
@@ -446,6 +444,8 @@ button {
   gap: 24px;
   justify-content: center;
   align-items: center;
+  width: 232px;
+  margin: 0 auto;
 }
 
 .foto-info ul li {
@@ -537,6 +537,11 @@ button {
   position: relative;
   overflow: hidden;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-item img {
@@ -1632,7 +1637,18 @@ footer .social-link:focus {
     background-color: #f4f4fd;
     padding-top: 120px;
     padding-bottom: 120px;
+    display: flex;
+    justify-content: center;
   }
+
+
+  .section-fotos .container {
+    width: 1158px;
+    margin: 0;
+  }
+
+
+
 
   .list-foto {
     flex-wrap: nowrap;
@@ -1675,7 +1691,6 @@ footer .social-link:focus {
   /* #region footer */
 
   .container {
-    margin: 0;
     padding: 0;
   }
 
