--- a/css/styles.css
+++ b/css/styles.css
@@ -175,15 +175,15 @@ header {
   color: #404bbf;
 }
 
-.phone-block .contact-link {
-  font-weight: 400;
-  font-size: 12px;
+.phone-block .contact-link .nav-list .contact-link {
+  font-weight: 700;
+  font-size: 36px;
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #434455;
 }
 
-/* #region mobile-menu */
+/* #endregion mobile-menu */
 
 .footer-social {
   display: flex;
@@ -313,7 +313,9 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 24px;
+
+
+  gap: 72px;
 }
 
 .section-strategy li {
@@ -468,10 +470,11 @@ button {
   background-color: #4D5AE5;
 }
 
+/* 
 .foto-info ul li svg {
   fill: black;
   transition: fill 250ms cubic-bezier(0.25, 0.1, 0.25, 1);
-}
+} */
 
 .foto-info ul li:hover {
   transform: scale(1.1);
@@ -631,8 +634,9 @@ button {
 
 .footer-logo-cont {
   background-color: #2e2f42;
-  width: 320px;
-  margin: 96px auto 0;
+  width: 100%;
+  margin: 0;
+  padding: 96px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1245,8 +1249,8 @@ footer .social-link:focus {
   }
 
   .contact-link {
-    font-weight: 400;
-    font-size: 12px;
+    font-weight: 700;
+    font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #434455;
@@ -1545,14 +1549,17 @@ footer .social-link:focus {
   /* #region section-strategy */
 
   .container {
-    max-width: 1128px;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
   }
 
   .icon-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 224px;
+    height: 112px;
     width: 264px;
     background-color: #f4f4fd;
     border-radius: 4px;
